[package]
name = "network-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
color-eyre = "0.5.11"
dashmap = "4.0.2"
futures = "0.3.17"
hex = "0.4.3"
internment = "0.5.4"
log = "0.4.14"
petgraph = "0.6.0"
petgraph-graphml = "3.0.0"
pin-project = "1.0.8"
pretty_env_logger = "0.4.0"
prost = "0.9.0"
rand = "0.6.5"
secp256k1 = { version = "0.20.3", features = ["rand"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tmq = "0.3.0"
tokio = { version = "1.12.0", features = ["full"] }
tokio-tungstenite = "0.15.0"
uuid = { version = "0.8.2", features = ["v4"] }
zmq = "0.9.2"

[build-dependencies]
glob = "0.3.0"
prost-build = "0.9.0"

[features]
